fix: nav collapse only off hover

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,22 +126,22 @@ body {
     @apply md:grid md:gap-x-6 grid-cols-2 md:grid-cols-4 lg:grid-cols-6 2xl:grid-cols-8 auto-rows-min;
   }
   .text-heading-d {
-    @apply text-heading-d-sm md:text-heading-d-md lg:text-heading-d-lg 2xl:text-heading-d-xl;
+    @apply text-heading-d-sm md:text-heading-d-md lg:text-heading-d-lg 4xl:text-heading-d-xl;
   }
   .text-heading-1 {
-    @apply text-heading-1-sm md:text-heading-1-md lg:text-heading-1-lg 2xl:text-heading-1-xl font-medium;
+    @apply text-heading-1-sm md:text-heading-1-md lg:text-heading-1-lg 4xl:text-heading-1-xl font-medium;
   }
   .text-heading-2 {
-    @apply text-heading-2-sm md:text-heading-2-md lg:text-heading-2-lg 2xl:text-heading-2-xl font-medium;
+    @apply text-heading-2-sm md:text-heading-2-md lg:text-heading-2-lg 4xl:text-heading-2-xl font-medium;
   }
   .text-body-1 {
-    @apply text-body-1-sm md:text-body-1-md lg:text-body-1-lg 2xl:text-body-1-xl;
+    @apply text-body-1-sm md:text-body-1-md lg:text-body-1-lg 4xl:text-body-1-xl;
   }
   .text-body-2 {
-    @apply text-body-2-sm md:text-body-2-md lg:text-body-2-lg 2xl:text-body-2-xl;
+    @apply text-body-2-sm md:text-body-2-md lg:text-body-2-lg 4xl:text-body-2-xl;
   }
   .text-body-3 {
-    @apply text-body-3-sm md:text-body-3-md lg:text-body-3-lg 2xl:text-body-3-xl;
+    @apply text-body-3-sm md:text-body-3-md lg:text-body-3-lg 4xl:text-body-3-xl;
   }
 }
 
